--- a/src/stylesheet/home.css
+++ b/src/stylesheet/home.css
@@ -1,6 +1,5 @@
 body{
- 
- 
+overflow: hidden;
 }
 
 .background{
@@ -12,6 +11,25 @@ body{
     background-color:rgba(0, 0, 0, 0.548);
     overflow: hidden;
     z-index: 0;
+}
+.background-small{
+    position:absolute;
+    color:white;
+    width:100%;
+    height:100vh;
+    top:0%;
+    background-color: black;
+    background-size: contain;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    z-index: 0;
+}
+.background-small img{
+    width: 100%;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%)
 }
 
 .baloon{
@@ -28,6 +46,8 @@ body{
         animation-iteration-count: infinite;
         animation-direction: alternate;
 }
+
+
 @keyframes baloon{
     from{
         transform: translateY(-30px);
