--- a/src/stylesheet/plot.css
+++ b/src/stylesheet/plot.css
@@ -1,14 +1,22 @@
 .plot-container{
-    position:absolute;
+    position: relative;
     color:white;
     width:100%;
     height:100vh;
     top:0%;
     background-color:rgba(0, 0, 0, 0.548);
     background-image: url("https://images.wired.it/wp-content/uploads/2019/09/05142553/pennywise_bill_skarsgard_it_capitolo_due.jpg");
+   background-size: cover;
+   background-repeat: no-repeat;
     padding:2rem;
+    overflow: hidden;
 }
 #plot-text{
-    max-width:800px;
-    margin-left:20rem
+    position: absolute;
+    bottom:0%;
+    padding-top:2rem;
+    padding-bottom:2rem;
+    background: linear-gradient(0deg, rgba(0,0,0,1) 31%, rgba(255,255,255,0) 100%);
+    padding-right:3rem;
+    
 }
